--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,27 +4,16 @@ services:
     image: nginx:latest
     depends_on:
       - flask_cpu
-      - flask_memory
     volumes:
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - 8080:80
-      - 8090:81
     networks:
       - my_project_network
   
   flask_cpu:
     build:
       context: ./cpu
-      dockerfile: Dockerfile
-    expose:
-      - 5000
-    networks:
-      - my_project_network
-
-  flask_memory:
-    build:
-      context: ./memory
       dockerfile: Dockerfile
     expose:
       - 5000
